<resources>
    <string name="app_name">안드로이드 사진 보기</string>
    <string name="text_select_start">선택을 시작하시겠습니까?</string>
    <string name="text_favorite_version">좋아하는 안드로이드 버전은?</string>
    <string name="switch_start">시작함</string>
    <string name="radio_o">오레오(8.0)</string>
    <string name="radio_p">파이(9.0)</string>
    <string name="radio_q">Q(10.0)</string>
    <string name="btn_done">종료</string>
    <string name="btn_first">처음으로</string>
</resources>