<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_start"
        android:textSize="@dimen/text_size_large"
        android:layout_marginBottom="@dimen/margin_small"/>
    <Switch
        android:id="@+id/switch_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_start"
        android:textSize="@dimen/text_size_medium"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--android:background="@color/purple_200">-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_favorite_version"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_o"
                android:textSize="@dimen/text_size_medium"/>
            <RadioButton
                android:id="@+id/radio_rabbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_p"
                android:textSize="@dimen/text_size_medium"/>
            <RadioButton
                android:id="@+id/radio_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_q"
                android:textSize="@dimen/text_size_medium"/>
        </RadioGroup>
        <ImageView
            android:id="@+id/imgv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/dog"/>
        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="@string/btn_done"/>
        <Button
            android:id="@+id/btn_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_xsmall"
            android:text="@string/btn_first"/>
    </LinearLayout>
</LinearLayout>